examples/enable-operator-and-auto-instrumentation/spring-petclinic/02_config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file spring-petclinic/spring-petclinic-microservices/docker-compose.yml  convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: config-server
  name: config-server
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: config-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file spring-petclinic/spring-petclinic-microservices/docker-compose.yml  convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-petclinic-microservices-default: "true"
        io.kompose.service: config-server
    spec:
      containers:
        - image: springcommunity/spring-petclinic-config-server
          name: config-server
          ports:
            - containerPort: 8888
          resources:
            limits:
              memory: "350Mi"
      restartPolicy: Always
status: {}
