examples/enable-operator-and-auto-instrumentation/spring-petclinic/02_admin-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file spring-petclinic/spring-petclinic-microservices/docker-compose.yml  convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-server
  name: admin-server
  namespace: spring-petclinic
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: admin-server
status:
  loadBalancer: {}
