examples/enable-operator-and-auto-instrumentation/spring-petclinic/02_customers-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file spring-petclinic/spring-petclinic-microservices/docker-compose.yml  convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: customers-service
  name: customers-service
  namespace: spring-petclinic
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: customers-service
status:
  loadBalancer: {}
