examples/enable-operator-and-auto-instrumentation/spring-petclinic/02_discovery-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file spring-petclinic/spring-petclinic-microservices/docker-compose.yml  convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: discovery-server
  name: discovery-server
  namespace: spring-petclinic
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    io.kompose.service: discovery-server
status:
  loadBalancer: {}
