examples/enable-operator-and-auto-instrumentation/spring-petclinic/02_vets-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file spring-petclinic/spring-petclinic-microservices/docker-compose.yml  convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: vets-service
  name: vets-service
  namespace: spring-petclinic
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    io.kompose.service: vets-service
status:
  loadBalancer: {}
