examples/enable-operator-and-auto-instrumentation/spring-petclinic/02_spring-petclinic-microservices-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: spring-petclinic-microservices-default
  namespace: spring-petclinic
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/spring-petclinic-microservices-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/spring-petclinic-microservices-default: "true"
